--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
     <section>
         <ul>
             <li>
-                <h2>Внимание к деталям</h2>
+                <h3>Внимание к деталям</h2>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.
                 </p>
             </li>
             <li>
-                <h2>Пунктуальность</h2>
+                <h3>Пунктуальность</h2>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                 </p>
             </li>
             <li>
-                <h2>Планирование</h2>
+                <h3>Планирование</h2>
                 <p>Равным образом консультация с широким активом в значительной степени обуславливает.
                 </p>
             </li>
             <li>
-                <h2>Современные технологии</h2>
+                <h3>Современные технологии</h2>
                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                 </p>
             </li>
@@ -61,7 +61,7 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
-                <img src="./img/example_of_work_1.jpg" alt="Создание интернет сайта" width="370" Height="294">
+                <img src="./img/example_of_work_1.jpg" alt="Создание интернет сайта" width="370" height="294">
             </li>
             <li>
                 <img src="./img/example_of_work_2.jpg" alt="Оптимизация сайта для просмотра с телефона" width="370" height="294">
@@ -103,12 +103,11 @@
         <a href="">WebStudio
         </a> 
 <!--Address-->
-        <div>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <p>info@example.com</p>
-        <p>+38 099 111 11 11</p>
-        </div>
-    </footer>
-
+        <address>
+            г. Киев, пр-т Леси Украинки, 26 <br>
+            <a href="mailto:info@example.com">info@example.com</a> <br>
+            <a href="tel:+380991111111">+38 099 111 11 11</a> <br>
+        </address>
+     </footer>
 </body>
 </html>
